[package]
name = "proxy70"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "=4.4.18", features = ["derive"] }
femme = "2.2.1"
http-types = "2.12.0"
serde = { version = "1.0.203", features = ["derive"] }
tide = "0.16.0"
tinytemplate = "1.2.1"
url = "2.5.1"
urlencoding = "2.1.3"
