[package]
name = "proxy70"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "HTTP proxy for browsing gopher via your browser"
repository = "https://github.com/beebeeep/proxy70/"

[[bin]]
path = "src/main.rs"
name = "proxy70"

[dependencies]
ansitok = "0.2.0"
anyhow = "1.0.86"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "=4.4.18", features = ["derive"] }
dashmap = "6.1.0"
femme = "2.2.1"
html-escape = "0.2.13"
regex_static = "0.1.1"
serde = { version = "1.0.203", features = ["derive"] }
tide = "0.16.0"
tinytemplate = "1.2.1"
urlencoding = "2.1.3"
